fixed color issue (color not showing when click download) and fixed the modern template name in block

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,17 @@
       padding: 0;
       box-shadow: none;
     }
+
+    * {
+      -webkit-print-color-adjust: exact !important;
+      print-color-adjust: exact !important;
+      color-adjust: exact !important;
+    }
+
+    .skill-rating-bar {
+      background-color: currentColor !important;
+      border: 1px solid currentColor !important;
+    }
   }
 
   @page{
